--- a/app/views/hosts/delete.html.erb
+++ b/app/views/hosts/delete.html.erb
@@ -2,16 +2,12 @@
 <form action="/hosts/<%= @host.id%>" method="post">
 	<input type="hidden" name="_method" value="delete">
 	<div>
-		<label>First Name:</label>
-		<input type="text" name="host[first_name]" value="<%= @host.first_name%>" disabled>
-	</div>
-	<div>
-		<label>Last Name:</label>
-		<input type="text" name="host[last_name]" value="<%= @host.last_name%>" disabled>
+		<label>FullName:</label>
+		<input type="text" name="host[FullName]" value="<%= @host.fullname%>" disabled>
 	</div>
 	<div>
 		<label>Email:</label>
-		<input type="text" name="host[last_name]" value="<%= @host.email_address%>" disabled>
+		<input type="text" name="host[email_address]" value="<%= @host.email_address%>" disabled>
 	</div>
 	<input type="submit" value="Delete">
 </form>
