--- a/app/views/hosts/edit.html.erb
+++ b/app/views/hosts/edit.html.erb
@@ -1,12 +1,8 @@
 <h1>Edit <%= @host.first_name%> <%= @host.last_name%> <%= @host.email%></h1>
 <form action="/hosts/<%= @host.id%>" method="post">
 	<div>
-		<label>First Name:</label>
-		<input type="text" name="host[first_name]" value="<%= @host.first_name%>">
-	</div>
-	<div>
-		<label>Last Name:</label>
-		<input type="text" name="host[last_name]" value="<%= @host.last_name%>">
+		<label>FullName:</label>
+		<input type="text" name="host[FullName]" value="<%= @host.first_name%>">
 	</div>
 	<div>
 		<label>Email:</label>
