--- a/app/views/hosts/new.html.erb
+++ b/app/views/hosts/new.html.erb
@@ -1,12 +1,8 @@
 <h1>Create Hosts</h1>
 <form action="/hosts" method="post">
 	<div class="form-group">
-		<label>First Name:</label>
-		<input type="text" name="host[first_name]" class="form-control">
-	</div>
-	<div class="form-group">
-		<label>Last Name:</label>
-		<input type="text" name="host[last_name]" class="form-control">
+		<label>FullName:</label>
+		<input type="text" name="host[FullName]" class="form-control">
 	</div>
 	<div class="form-group">
 		<label>Email:</label>
