--- a/app/views/hosts/new.html.erb
+++ b/app/views/hosts/new.html.erb
@@ -2,11 +2,11 @@
 <form action="/hosts" method="post">
 	<div class="form-group">
 		<label>FullName:</label>
-		<input type="text" name="host[FullName]" class="form-control">
+		<input type="text" name="host[fullname]" class="form-control">
 	</div>
 	<div class="form-group">
 		<label>Email:</label>
-		<input type="text" name="host[email_address]" class="form-control">
+		<input type="text" name="host[email]" class="form-control">
 	</div>
 	<input type="submit" value="Create" class="btn btn-primary">
 </form>
