Continue working on Host and the Navbar

--- a/app/views/hosts/_navbar.htmal.erb
+++ b/app/views/hosts/_navbar.htmal.erb
@@ -1,28 +1,28 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/actors">Meeting Scheduler</a>
+    <a class="navbar-brand" href="/hosts">Meeting Scheduler</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/actors">View Host</a>
+          <a class="nav-link" href="/hosts">View Host</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/actors/new">Create Host</a>
+          <a class="nav-link" href="/hosts/new">Create Host</a>
       </li>
        <li class="nav-item">
-          <a class="nav-link" href="/movies">View Meeting</a>
+          <a class="nav-link" href="/meetings">View Meeting</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/movies/new">Create Meeting</a>
+          <a class="nav-link" href="/meetings/new">Create Meeting</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="/appearances">View Partcipant</a>
+          <a class="nav-link" href="/partcipant/partcipants">View Partcipant</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="/appearances">Create Partcipant</a>
+          <a class="nav-link" href="/partcipant/partcipants">Create Partcipant</a>
       </li>
       </ul>
     </div>
