--- a/app/views/hosts/_navbar.html.erb
+++ b/app/views/hosts/_navbar.html.erb
@@ -19,10 +19,10 @@
           <a class="nav-link" href="/meetings/new">Create Meeting</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="/partcipant/partcipants">View Partcipant</a>
+          <a class="nav-link" href="/partcipants">View Partcipant</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="/partcipant/partcipants">Create Partcipant</a>
+          <a class="nav-link" href="/partcipants/new">Create Partcipant</a>
       </li>
       </ul>
     </div>
