Fix the Webpage

--- a/app/views/hosts/delete.html.erb
+++ b/app/views/hosts/delete.html.erb
@@ -3,11 +3,11 @@
 	<input type="hidden" name="_method" value="delete">
 	<div>
 		<label>FullName:</label>
-		<input type="text" name="host[fullname]" value="<%= @hosts.fullname%>" disabled>
+		<input type="text" name="host[fullname]" value="<%= @hosts.fullname%>" disabled class="form-control">
 	</div>
 	<div>
 		<label>Email:</label>
-		<input type="text" name="host[email]" value="<%= @hosts.email%>" disabled>
+		<input type="text" name="host[email]" value="<%= @hosts.email%>" disabled class="form-control">
 	</div>
 	<input type="submit" value="Delete">
 </form>
