--- a/app/views/participants/delete.html.erb
+++ b/app/views/participants/delete.html.erb
@@ -3,11 +3,11 @@
 	<input type="hidden" name="_method" value="delete">
 	<div>
 		<label>Participant's Full Name:</label>
-		<input type="text" name="participants[fullname]" value="<%= @participants.fullname%>" disabled>
+		<input type="text" name="participants[fullname]" value="<%= @participants.fullname%>" disabled class="form-control">
 	</div>
 	<div>
 		<label>Participant's Email:</label>
-		<input type="text" name="participants[email]" value="<%= @participants.email%>" disabled>
+		<input type="text" name="participants[email]" value="<%= @participants.email%>" disabled class="form-control">
 	</div>
 	<input type="submit" value="Delete">
 </form>
