--- a/app/views/hosts/edit.html.erb
+++ b/app/views/hosts/edit.html.erb
@@ -2,11 +2,11 @@
 <form action="/hosts/<%= @hosts.id%>" method="post">
 	<div>
 		<label>FullName:</label>
-		<input type="text" name="host[fullname]" value="<%= @hosts.fullname%>">
+		<input type="text" name="host[fullname]" value="<%= @hosts.fullname%>"  class="form-control">
 	</div>
 	<div>
 		<label>Email:</label>
-		<input type="text" name="host[email]" value="<%= @hosts.email%>">
+		<input type="text" name="host[email]" value="<%= @hosts.email%>"  class="form-control">
 	</div>
 	<input type="submit" value="Update">
 </form>
