--- a/app/views/meetings/delete.html.erb
+++ b/app/views/meetings/delete.html.erb
@@ -3,15 +3,15 @@
 	<input type="hidden" name="_method" value="delete">
 	<div>
 		<label>Meeting's Name:</label>
-		<input type="text" name="meetings[name]" value="<%= @meetings.name%>" disabled>
+		<input type="text" name="meetings[name]" value="<%= @meetings.name%>" disabled class="form-control">
 	</div>
 	<div>
 		<label>Meeting's Location:</label>
-		<input type="text" name="meetings[location]" value="<%= @meetings.location%>" disabled>
+		<input type="text" name="meetings[location]" value="<%= @meetings.location%>" disabled class="form-control">
 	</div>
 	<div>
 		<label>Last Date:</label>
-		<input type="text" name="meetings[date]" value="<%= @meetings.date%>" disabled>
+		<input type="text" name="meetings[date]" value="<%= @meetings.date%>" disabled class="form-control">
 	</div>
 	<input type="submit" value="Delete">
 </form>
