--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -2,15 +2,15 @@
 <form action="/meetings/<%= @meetings.id %>" method="post">
 	<div>
 		<label>Meeting's Name:</label>
-		<input type="text" name="meetings[name]" value="<%= @meetings.name%>">
+		<input type="text" name="meetings[name]" value="<%= @meetings.name%>" class="form-control">
 	</div>
 	<div>
 		<label>Meeting's Location:</label>
-		<input type="text" name="meetings[location]" value="<%= @meetings.location%>">
+		<input type="text" name="meetings[location]" value="<%= @meetings.location%>" class="form-control">
 	</div>
 	<div>
 		<label>Meeting's Date:</label>
-		<input type="text" name="meetings[date]" value="<%= @meetings.date%>">
+		<input type="text" name="meetings[date]" value="<%= @meetings.date%>" class="form-control">
 	</div>
 	<input type="submit" value="Update">
 </form>
