--- a/app/views/participants/edit.html.erb
+++ b/app/views/participants/edit.html.erb
@@ -2,11 +2,11 @@
 <form action="/participants/<%= @participants.id %>" method="post">
 	<div>
 		<label>Participants's Full Name:</label>
-		<input type="text" name="participants[fullname]" value="<%= @participants.fullname%>">
+		<input type="text" name="participants[fullname]" value="<%= @participants.fullname%>" class="form-control">
 	</div>
 	<div>
 		<label>Participants's Email:</label>
-		<input type="text" name="participants[email]" value="<%= @participants.email%>">
+		<input type="text" name="participants[email]" value="<%= @participants.email%>" class="form-control">
 	</div>
 	<input type="submit" value="Update">
 </form>
