--- a/app/views/hosts/edit.html.erb
+++ b/app/views/hosts/edit.html.erb
@@ -12,6 +12,6 @@
 </form>
 <% if flash[:errors] %>
 	<% flash[:errors].each do |e| %>
-	<div><%= e %></div>
+	<div class="alert alert-danger"><%= e %></div>
 	<% end %>
 <% end %>
