--- a/app/views/hosts/_navbar.html.erb
+++ b/app/views/hosts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-primary">
+_<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="/hosts">Meeting Scheduler</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,19 +7,19 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/hosts">View Host</a>
+          <a class="nav-link" href="/hosts">Host</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/hosts/new">Create Host</a>
       </li>
        <li class="nav-item">
-          <a class="nav-link" href="/meetings">View Meeting</a>
+          <a class="nav-link" href="/meetings">Meeting</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/meetings/new">Create Meeting</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="/participants">View Partcipant</a>
+          <a class="nav-link" href="/participants">Partcipant</a>
       </li>
       <li class="nav-item">
           <a class="nav-link" href="/participants/new">Create Partcipant</a>
