--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,4 +1,4 @@
-<h1>View <%= pluralize(@meetings.count, "Meeting") %></h1>
+<h1> <%= pluralize(@meetings.count, "Meeting") %></h1>
 <table class="table table-striped">
 	<thead>
 		<th scope="col">Meeting's Name</th>
@@ -13,10 +13,11 @@
 			<td><%= meeting.date %></td>
 			<td>
 				<a href="/meetings/<%= meeting.id %>/edit">Edit</a> |
-				<a href="/meetings/<%= meeting.id %>/delete">Delete</a>
+				<a href="/meetings/<%= meeting.id %>/delete">Delete</a> |
+				<a href="/meetings/<%= meeting.id %>/delete">Host</a> | 
+				<a href="/meetings/<%= meeting.id %>/delete">Respond</a>
 			</td>
 		</tr>
 		<% end %>
 	</tbody>
 </table>
-<a href="/meetings/new">Create Meeting</a>
