Working on the webage for participants to meetings

--- a/app/views/assoicate/index.html.erb
+++ b/app/views/assoicate/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Create Assoicate</h1>
+<h1>Select Participants to Meeting</h1>
 <form action="/assoicate" method="post">
 	<div>
 		<label>Meeting:</label>
