--- a/app/views/hosts/_navbar.html.erb
+++ b/app/views/hosts/_navbar.html.erb
@@ -24,6 +24,12 @@ _<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <li class="nav-item">
           <a class="nav-link" href="/participants/new">Create Partcipant</a>
       </li>
+      <li class="nav-item">
+          <a class="nav-link" href="/participants/new">Host to Meeting</a>
+        </li>
+      <li class="nav-item">
+          <a class="nav-link" href="/participants/new">Meeting to Participants</a>
+        </li>
       </ul>
     </div>
   </div>
