--- a/app/views/hosts/_navbar.html.erb
+++ b/app/views/hosts/_navbar.html.erb
@@ -25,11 +25,8 @@ _<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
           <a class="nav-link" href="/participants/new">Create Partcipant</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="/participants/new">Host to Meeting</a>
-        </li>
-      <li class="nav-item">
-          <a class="nav-link" href="/participants/new">Meeting to Participants</a>
-        </li>
+          <a class="nav-link" href="/associate">Associate</a>
+      </li>
       </ul>
     </div>
   </div>
