--- a/app/views/hosts/_navbar.html.erb
+++ b/app/views/hosts/_navbar.html.erb
@@ -27,6 +27,9 @@ _<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <li class="nav-item">
           <a class="nav-link" href="/associate">Associate</a>
       </li>
+      <li class="nav-item">
+          <a class="nav-link" href="/associate/new"> Create Associate</a>
+      </li>
       </ul>
     </div>
   </div>
