Finished host to a meeting page

--- a/app/views/appearance/index.html.erb
+++ b/app/views/appearance/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Select Host to a Meeting</h1>
+<h1>Select a Host to a Meeting</h1>
 <form action="/appearance" method="post">
 	<div>
 		<label>Meeting:</label>
