--- a/app/views/hosts/_navbar.html.erb
+++ b/app/views/hosts/_navbar.html.erb
@@ -12,6 +12,9 @@ _<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <li class="nav-item">
           <a class="nav-link" href="/hosts/new">Create Host</a>
       </li>
+      <li class="nav-item">
+          <a class="nav-link" href="/appearance">Link Host to Meeting</a>
+        </li>
        <li class="nav-item">
           <a class="nav-link" href="/meetings">Meeting</a>
         </li>
