--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -14,7 +14,7 @@
 			<td>
 				<a href="/meetings/<%= meeting.id %>/edit">Edit</a> |
 				<a href="/meetings/<%= meeting.id %>/delete">Delete</a> |
-				<a href="/meetings/<%= meeting.id %>/delete">Host</a> | 
+				<a href="/meetings/<%= meeting.id %>">Host</a> | 
 				<a href="/meetings/<%= meeting.id %>/delete">Respond</a>
 			</td>
 		</tr>
