Finished with meeting to a host page (vice versa)

--- a/app/views/hosts/index.html.erb
+++ b/app/views/hosts/index.html.erb
@@ -11,7 +11,8 @@
 			<td><%= host.email %></td>
 			<td>
 				<a href="/hosts/<%= host.id %>/edit">Edit</a> |
-				<a href="/hosts/<%= host.id %>/delete">Delete</a>
+				<a href="/hosts/<%= host.id %>/delete">Delete</a> |
+				<a href="/hosts/<%= host.id %>/meetings">Meeting</a>
 			</td>
 		</tr>
 		<% end %>
