--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -15,7 +15,7 @@
 				<a href="/meetings/<%= meeting.id %>/edit">Edit</a> |
 				<a href="/meetings/<%= meeting.id %>/delete">Delete</a> |
 				<a href="/meetings/<%= meeting.id %>">Host</a> | 
-				<a href="/meetings/<%= meeting.id %>/delete">Respond</a>
+				<a href="/meetings/<%= meeting.id %>">Participant</a>
 			</td>
 		</tr>
 		<% end %>
