--- a/app/views/participants/show.html.erb
+++ b/app/views/participants/show.html.erb
@@ -2,7 +2,7 @@
 <table class="table table-striped">
 	<thead>
 		<th scope="col">Participant's Full Name</th>
-		<th scope="col">Participant's Email</th>
+		<th scope="col">Participant's Location</th>
 	</thead>
 	<tbody>
 		<% @participants.each do |participant| %>
