The complete participant page completed

--- a/app/views/associate/show.html.erb
+++ b/app/views/associate/show.html.erb
@@ -8,7 +8,7 @@
 		<% @participants.each do |participant| %>
 		<tr>
 			<td><%= participant.fullname %></td>
-			<td><%= participant.location %></td>
+			<td><%= participant.email %></td>
 		</tr>
 		<% end %>
 	</tbody>
