--- a/app/views/associate/show.html.erb
+++ b/app/views/associate/show.html.erb
@@ -1,4 +1,4 @@
-<h1> The Participants Has <%= pluralize(@participants.count, "Participant") %></h1>
+<h1> The Meetings Has <%= pluralize(@participants.count, "Participant") %></h1>
 <table class="table table-striped">
 	<thead>
 		<th scope="col">Participant's Full Name</th>
