Full Complete Webpage

--- a/app/views/hosts/_navbar.html.erb
+++ b/app/views/hosts/_navbar.html.erb
@@ -12,9 +12,6 @@ _<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <li class="nav-item">
           <a class="nav-link" href="/hosts/new">Create Host</a>
       </li>
-      <li class="nav-item">
-          <a class="nav-link" href="/appearance">Link Host to Meeting</a>
-        </li>
        <li class="nav-item">
           <a class="nav-link" href="/meetings">Meeting</a>
         </li>
@@ -28,7 +25,10 @@ _<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
           <a class="nav-link" href="/participants/new">Create Partcipant</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="/associate">Create Associate</a>
+          <a class="nav-link" href="/appearance">Enroll Host to Meeting</a>
+        </li>
+      <li class="nav-item">
+          <a class="nav-link" href="/associate">Enroll Participant to Meeting</a>
       </li>
       </ul>
     </div>
