--- a/app/views/appearance/index.html.erb
+++ b/app/views/appearance/index.html.erb
@@ -18,7 +18,7 @@
 			<% end %>
 		</select>
 	</div>
-	<input type="submit" value="Create">
+	<input type="submit" value="Add">
 </form>
 <% if flash[:errors] %>
 	<% flash[:errors].each do |e| %>
