Fully Upgraded Webpage and fixed the minor mistake

--- a/app/views/associate/index.html.erb
+++ b/app/views/associate/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Create Associate</h1>
+<h1>Select a Participant to a Meeting</h1>
 <form action="/associate" method="post">
 	<div>
 		<label>Participants:</label>
