--- a/app/views/associate/show.html.erb
+++ b/app/views/associate/show.html.erb
@@ -9,6 +9,9 @@
 		<tr>
 			<td><%= participant.fullname %></td>
 			<td><%= participant.email %></td>
+			<td>
+				<a href="/participants/<%= participant.id %>/respond">Respond</a>
+			</td>
 		</tr>
 		<% end %>
 	</tbody>
